update describe and api spec
